test/corpus/declarations.txt
================================================================================
Variables Definition
================================================================================

Перем ИмяПеременной1;

// Пояснительный комментарий к переменной
var ИмяПеременной2;

VaR ИмяПеременной_2, _ИмяПеременной3 Экспорт;

Перем VarName4; // Некоторый комментарий к переменной

--------------------------------------------------------------------------------

(source_file
    (var_definition
        (identifier))
    (line_comment)    
    (var_definition
        (identifier))
    (var_definition
        (identifier)
        (identifier)
        (export_modifier))
    (var_definition
        (identifier))
    (line_comment)    
)

================================================================================
Procedure Definition
================================================================================

Процедура ИмяПроцедуры()

КонецПроцедуры

Процедура ИмяПроцедуры(ИмяПараметра) Экспорт
    Возврат;
КонецПроцедуры

Процедура ИмяПроцедуры(ИмяПараметра, Знач ИмяПараметра2, ИмяПараметра3 = Неопределено) Экспорт
    Возврат
КонецПроцедуры


--------------------------------------------------------------------------------